--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "@11ty/eleventy": "^3.1.2",
-    "@11ty/eleventy-plugin-rss": "^2.0.4"
+    "@11ty/eleventy-plugin-rss": "^2.0.4",
+    "dotenv": "^17.2.3"
   },
   "scripts": {
     "build": "npx @11ty/eleventy",
