--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@11ty/eleventy": "^3.1.2",
     "@11ty/eleventy-plugin-rss": "^2.0.4",
+    "cheerio": "^1.1.2",
     "dotenv": "^17.2.3",
     "node-fetch": "^3.3.2"
   },
